--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
@@ -24,6 +24,8 @@
     "pug": "2.0.0-beta11",
     "rand-token": "^1.0.1",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "tedis": "^0.1.12",
+    "uuid": "^8.3.2"
   }
 }
